<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroll" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#EDF1F4">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/principal"
		android:background="#f0f0f0" android:orientation="vertical">
		<TextView android:id="@+id/label" android:text="@string/desire3es"
			android:layout_width="fill_parent" android:textColor="#000"
			android:gravity="center_vertical|left" android:layout_height="wrap_content"
			android:layout_marginTop="10dip" android:layout_marginBottom="20dip"
			android:padding="5dip" android:textSize="18dip"></TextView>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/botones"
			android:background="#EDF1F4" android:orientation="horizontal"
			android:gravity="center_horizontal" android:layout_marginBottom="20dip"
			android:weightSum="100">
			<Button android:id="@+id/catalogo" android:layout_width="0px"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:text="@string/vercatalogo"
				android:layout_weight="33" />

			<Button android:id="@+id/visitarweb" android:layout_width="0px"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:text="@string/visitarweb"
				android:layout_weight="33" />

			<Button android:id="@+id/contacto" android:layout_width="0px"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:text="@string/contacto"
				android:layout_weight="33" />
		</LinearLayout>

		<LinearLayout android:id="@+id/redessociales"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:orientation="horizontal" android:layout_below="@id/contacto"
			android:layout_centerInParent="true" android:layout_centerHorizontal="true"
			android:layout_centerVertical="true" android:gravity="center_vertical"
			android:weightSum="100">

			<ImageButton android:id="@+id/twitter" android:src="@drawable/twitter32"
				android:layout_width="0px" android:layout_weight="33"
				android:layout_height="wrap_content"></ImageButton>

			<ImageButton android:id="@+id/slideshare" android:src="@drawable/slideshare"
				android:layout_width="0px" android:layout_weight="33"
				android:layout_height="wrap_content"></ImageButton>

			<ImageButton android:id="@+id/vimeo" android:src="@drawable/vimeo32"
				android:layout_width="0px" android:layout_weight="33"
				android:layout_height="wrap_content"></ImageButton>
		</LinearLayout>
		<TextView android:id="@+id/financiada" android:text="@string/financiada"
			android:layout_width="fill_parent" android:textColor="#000"
			android:gravity="center_vertical|left" android:layout_height="wrap_content"
			android:layout_marginTop="10dip" android:padding="5dip"
			android:textSize="14dip" android:layout_below="@id/redessociales"></TextView>
		<LinearLayout android:id="@+id/promo"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:orientation="horizontal" android:layout_below="@id/financiada"
			android:layout_centerInParent="true"
			android:layout_alignParentBottom="true" android:weightSum="100"
			android:layout_marginTop="10dip" android:gravity="center_horizontal">
			<ImageView android:id="@+id/imgXunta" android:src="@drawable/portada_xunta"
				android:layout_width="0dip" android:layout_height="100dip"
				android:layout_weight="33"></ImageView>

			<ImageView android:id="@+id/imgUE" android:src="@drawable/portada_fondo_social"
				android:layout_width="0dip" android:layout_height="100dip"
				android:layout_weight="33"></ImageView>

			<ImageView android:id="@+id/imgForem" android:src="@drawable/portada_forem"
				android:layout_width="0dip" android:layout_height="100dip"
				android:layout_weight="33"></ImageView>
		</LinearLayout>

	</LinearLayout>

</ScrollView>